--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -16,4 +16,5 @@ $fontTwo: roboto;
     color: white;
     font-weight: 600;
     font-size: .8em;
+    cursor: pointer;
 }
